; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_callback_on_playback_repeat_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_callback_on_playback_repeat_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_ctx = type { i32 }
%struct.playback_repeat_changed_report = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*)* @callback_on_playback_repeat_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @callback_on_playback_repeat_changed(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.callback_ctx*, align 8
  %8 = alloca %struct.playback_repeat_changed_report, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @VLC_UNUSED(i32* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.callback_ctx*
  store %struct.callback_ctx* %12, %struct.callback_ctx** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = getelementptr inbounds %struct.playback_repeat_changed_report, %struct.playback_repeat_changed_report* %8, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load %struct.callback_ctx*, %struct.callback_ctx** %7, align 8
  %16 = getelementptr inbounds %struct.callback_ctx, %struct.callback_ctx* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.playback_repeat_changed_report, %struct.playback_repeat_changed_report* %8, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @vlc_vector_push(i32* %16, i32 %18)
  ret void
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local i32 @vlc_vector_push(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
